--- a/src/components/Button/Button.sass
+++ b/src/components/Button/Button.sass
@@ -1,2 +1,34 @@
 .tab-button
+  padding: 10px
+
+  text-transform: uppercase
+  font-weight: 500
+  letter-spacing: 1px
+  color: -internal-light-dark(black, white)
+
+  background-color: #fff
+  border: none
+  outline: none
+
+  transition: background-color 400ms
+
   cursor: pointer
+
+  &:hover
+    background-color: rgba(98, 0, 238, 0.05)
+
+.highlighter
+  // position: absolute
+  // z-index: 10
+  // bottom: 0
+  height: 2px
+  background: #6200ee
+  // max-width: 100px
+  // width: 100%
+  display: none
+  // left: 0
+  transition: transform 1s ease, display 1s
+
+  &_active
+    display: block
+    transform: translateX(0)
