added highlighter animation

--- a/src/components/TabItem/TabItem.sass
+++ b/src/components/TabItem/TabItem.sass
@@ -27,16 +27,22 @@
 
   &__highlighter
     position: absolute
-    z-index: 10
-    bottom: 0
-    height: 2px
-    background:  #6200ee
     max-width: 110px
-    width: 100%
-    transform: translateX(0)
-    display: block
+    top: 100%
     left: 0
-    transition: transform .23s ease
+    right: 0
+    border-bottom: 2px solid #6200ee
+    // position: absolute
+    // z-index: 10
+    // bottom: 0
+    // height: 2px
+    // background:  #6200ee
+    // max-width: 110px
+    // width: 100%
+    // transform: translateX(0)
+    // display: block
+    // left: 0
+    // transition: transform .23s ease
 
-  &__button_active ~ &__highlighter
-    transform: translateX(100px)
+  // &__button_active ~ &__highlighter
+  //   transform: translateX(100px)
