--- a/src/components/TabItem/TabItem.sass
+++ b/src/components/TabItem/TabItem.sass
@@ -1,7 +1,7 @@
 .tab-item
 
   &__button
-    width: 110px
+    // width: 110px
     padding: 10px
 
     text-transform: uppercase
@@ -27,7 +27,7 @@
 
   &__highlighter
     position: absolute
-    max-width: 110px
+    // max-width: 110px
     top: 100%
     left: 0
     right: 0
