--- a/src/components/TabItem/TabItem.sass
+++ b/src/components/TabItem/TabItem.sass
@@ -5,6 +5,7 @@
     padding: 10px
 
     text-transform: uppercase
+    // font-family: inherit
     font-weight: 500
     letter-spacing: 1px
     color: -internal-light-dark(black, white)
