--- a/src/components/Tabs/Tabs.sass
+++ b/src/components/Tabs/Tabs.sass
@@ -1,8 +1,2 @@
-.tabs
-  display: flex
-  position: relative
-
-  margin: 0
-  padding: 0
-
-  list-style-type: none
+html
+  font-family: 'Roboto', 'Arial', sans-serif
