--- a/src/components/Tabs/_reset.sass
+++ b/src/components/Tabs/_reset.sass
@@ -25,8 +25,8 @@ body
   text-rendering: optimizeSpeed
   line-height: 1.5
 
-ul[class],
-ol[class]
+ul,
+ol
   list-style: none
   margin: 0
   padding: 0
