--- a/src/components/TabsNavItem/TabsNavItem.sass
+++ b/src/components/TabsNavItem/TabsNavItem.sass
@@ -3,10 +3,11 @@
 .tabs-nav-item
   &__button
     padding: 10px 35px
+    margin: 0
 
     text-transform: uppercase
+
     font-weight: 500
-    font-size: 14px
     letter-spacing: 1px
     color: $button-text-color
 
