--- a/src/helpers/_variables.sass
+++ b/src/helpers/_variables.sass
@@ -2,6 +2,8 @@ $main-color: #6200ee
 $button-text-color: rgba(0, 0, 0, 0.6)
 $basic-background-color: #fff
 
+$highlighter-duration: 500ms
+
 $hover-duration: 400ms
 $hover-background-color: rgba(98, 0, 238, 0.05)
 
